--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/log/*.log
-test/dummy/tmp/
 Gemfile.lock
+spec/dummy/rails_app/db/schema.rb
