--- a/spec/dummy/rails_app/Gemfile
+++ b/spec/dummy/rails_app/Gemfile
@@ -4,7 +4,4 @@ gem 'rails', '3.1.3'
 
 gem 'sqlite3'
 
-group :test do
-  # Pretty printed test output
-  gem 'turn', '0.8.2', :require => false
-end
+gem 'associator', :path => '../../../'
